# FFQueue

./: CMakeLists.txt
.github/workflows/: gha-ci.yml
src/: FFQAbout.cpp  FFQBatchMake.cpp  FFQConfigEdit.cpp  FFQFilterEdit.cpp  FFQJobEditAdv.cpp  FFQJobEditAdv.h  FFQJobEditAdvCuts.cpp  FFQLangEdit.cpp  FFQMain.cpp  FFQPresetEdit.cpp  FFQTimeEdit.cpp  resource.res
src/tools/: FFQConcat.cpp  FFQThumbMake.cpp  FFQVidStab.cpp
src/utils/: FFQBuildCmd.cpp  FFQConst.h  FFQTaskBar.cpp
